Disconnect lambdas when "this" is destroyed

BUG: 353870
REVIEW: 125639